@@ -148,5 +148,5 @@ vectors.parallel-components = Parallel Components
 vectors.x-y-components=X-Y Components
 vectors.sum-of-forces=Sum of Forces
 
-ramp.controls.title=Ramp Controls
+more.controls.title=More Controls
 object.position = Object Position
